--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=qlsv;encrypt=true;trustServerCertificate=true;
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=bookstore;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=SA
 spring.datasource.password=Admin123@
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
